--- a/package.json
+++ b/package.json
@@ -12,12 +12,15 @@
     "@types/react": "^18.2.55",
     "@types/react-dom": "^18.2.19",
     "antd": "^5.14.2",
+    "i18next": "^23.10.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-i18next": "^14.0.5",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.22.2",
     "react-scripts": "^5.0.1",
     "typescript": "^4.9.5",
+    "uuid": "^9.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -49,13 +52,14 @@
     ]
   },
   "devDependencies": {
+    "@types/uuid": "^9.0.8",
     "@typescript-eslint/eslint-plugin": "^7.1.0",
     "@typescript-eslint/parser": "^7.1.0",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-react": "^7.33.2",
-    "prettier": "^3.2.5",
-    "husky": "^8.0.0"
+    "husky": "^8.0.0",
+    "prettier": "^3.2.5"
   }
 }
