--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@aws-amplify/ui-react": "^6.1.6",
     "@reduxjs/toolkit": "^1.9.7",
     "@stripe/react-stripe-js": "^2.5.1",
     "@stripe/stripe-js": "^3.0.7",
@@ -14,6 +15,7 @@
     "@types/react": "^18.2.55",
     "@types/react-dom": "^18.2.19",
     "antd": "^5.14.2",
+    "aws-amplify": "^6.0.20",
     "base-64": "^1.0.0",
     "i18next": "^23.10.0",
     "react": "^18.2.0",
