--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-i18next": "^14.0.5",
+    "react-player": "^2.15.1",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.22.2",
     "react-scripts": "^5.0.1",
