--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.22.2",
     "react-scripts": "^5.0.1",
+    "redux-persist": "^6.0.0",
     "typescript": "^4.9.5",
     "uuid": "^9.0.1",
     "web-vitals": "^2.1.4"
