--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,7 +15,8 @@
     "isolatedModules": true,
     "noEmit": true,
     "jsx": "react-jsx",
-    "noImplicitThis": false
+    "noImplicitThis": false,
+    "noImplicitAny": false
   },
   "include": ["src"]
 }
