--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,9 @@
     "editor.defaultFormatter": "esbenp.prettier-vscode"
   },
   "cSpell.words": [
-    "Quickimmi"
-  ]
+    "datepicker",
+    "Quickimmi",
+    "textbox"
+  ],
+  "workbench.editor.revealIfOpen": true
 }
