Control - allow search for nationality

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,8 +5,14 @@
     "editor.defaultFormatter": "esbenp.prettier-vscode"
   },
   "cSpell.words": [
+    "Botswanan",
+    "Burkinabe",
     "datepicker",
+    "Diasporic",
+    "Juche",
     "Quickimmi",
+    "Signup",
+    "Tenrikyo",
     "textbox"
   ],
   "workbench.editor.revealIfOpen": true
