--- a/package.json
+++ b/package.json
@@ -18,10 +18,13 @@
     "aws-amplify": "^6.0.20",
     "base-64": "^1.0.0",
     "country-state-city": "^3.2.1",
+    "file-saver": "^2.0.5",
     "i18next": "^23.10.0",
+    "pdfjs-dist": "^4.2.67",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-i18next": "^14.0.5",
+    "react-pdf": "^8.0.0",
     "react-player": "^2.15.1",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.22.2",
@@ -29,7 +32,8 @@
     "redux-persist": "^6.0.0",
     "typescript": "^4.9.5",
     "uuid": "^9.0.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "worker-loader": "^3.0.8"
   },
   "scripts": {
     "start": "react-scripts start",
