Complete 589 JSON - i589_form - Personal Contact and immigration

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,7 +13,8 @@
     "Quickimmi",
     "Signup",
     "Tenrikyo",
-    "textbox"
+    "textbox",
+    "USCIS"
   ],
   "workbench.editor.revealIfOpen": true
 }
