--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "@types/react": "^18.2.55",
     "@types/react-dom": "^18.2.19",
     "antd": "^5.14.2",
-    "aws-amplify": "^6.0.20",
+    "aws-amplify": "6.3.2",
     "base-64": "^1.0.0",
     "country-state-city": "^3.2.1",
     "file-saver": "^2.0.5",
