--- a/package.json
+++ b/package.json
@@ -45,6 +45,24 @@
     "lint:fix": "eslint --fix .",
     "prettier": "prettier --write ."
   },
+  "jest": {
+    "testMatch": [
+      "**/__tests__/**/*.test.{js,jsx,ts,tsx}",
+      "!**/__tests__/__mocks__/**"
+    ],
+    "collectCoverageFrom": [
+      "**/__tests__/**/*.test.{js,jsx,ts,tsx}",
+      "!/node_modules/"
+    ],
+    "coverageThreshold": {
+      "global": {
+        "branches": 90,
+        "functions": 90,
+        "lines": 90,
+        "statements": 90
+      }
+    }
+  },
   "eslintConfig": {
     "extends": [
       "react-app",
